2009-XX-XX Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.1 (libshogun 6.0, libshogunui 3.1)
	* This release contains several cleanups and bugfixes:
	* Features:
		- Integrate LaRank.
		- Memory Mapped Features (for data sets that don't fit into memory).
	* Bugfixes:
		- Fix One class MKL testing in static interfaces.
		- Configure fixes: Let octave not write history on configure and fail
		when cplex is forcefully enabled but not found.
	* Cleanup and API Changes:
		- String Features now (like SimpleFeatures) upon get_feature_vector
		require and additional do_free argument and need to be freed using
		free_feature_vector

2009-10-23 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.0 (libshogun 5.0, libshogunui 3.0)
	* This release contains several cleanups and enhancements:
	* Features:
	    - Implement set_linear_classifier for static interfaces.
		- Implement Polynomial DotFeatures.
		- Implement domain adaptation SVM.
		- Speed up ScatterSVM.
		- Initial implementation for saving and Loading of shogun objects.
		- Examples have been polished/split up into separate files.
		- Documentation and webpage improvements.
	* Bugfixes:
		- Fix one class MKL for static interfaces.
		- Fix performance measures integer overflow.
		- Configure fixes to run under OSX's snow leopard.
		- Compiles and runs under solaris both using suncc and gcc.
	* Cleanup and API Changes:
		- It is no longer necessary to call init_kernel TRAIN/TEST.
		- Removed kernel {load,save}_init.
		- Removed preproc {load,save}_init.
		- Move the mkl code from classifier/svm to classifier/mkl.
		- Removed obsolete mindy support.
		- Rename MCSVM to ScatterSVM
		- Move distributions to distributions/ directory.
		- CClassifier::classify() no longer has a label as argument.
		- Introduce CClassifier::train(CFeatures* ) and classify(CFeatures*)
          for more effective training/testing.
		- Remove unnecessary global symbols.
