@@ -31,7 +31,11 @@ enum EPreProcType
 	P_SORTWORDSTRING=30,
 	P_SORTULONGSTRING=40,
 	P_SORTWORD=50,
-	P_PRUNEVARSUBMEAN=60
+	P_PRUNEVARSUBMEAN=60,
+	P_DECOMPRESSCHARSTRING=70,
+	P_DECOMPRESSBYTESTRING=80,
+	P_DECOMPRESSWORDSTRING=90,
+	P_DECOMPRESSULONGSTRING=100,
 };
 
 class CFeatures;
